etc/kubernetes/kafka.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-svc
  namespace: kaspar
spec:
  clusterIP: None
  ports:
    - name: '9092'
      port: 9092
      protocol: TCP
      targetPort: 9092
  selector:
    app.kubernetes.io/component: kafka
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-broker-0
  namespace: kaspar
spec:
  type: LoadBalancer
#  externalTrafficPolicy: Local
  ports:
    - name: external
      port: 9092
      protocol: TCP
      targetPort: 9092
#      nodePort: 31090
  selector:
    statefulset.kubernetes.io/pod-name: kafka-0
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
  namespace: kaspar
spec:
  serviceName: kafka-svc
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/component: kafka
  template:
    metadata:
      labels:
        app.kubernetes.io/component: kafka
    spec:
      containers:
        - name: kafka-container
          image: doughgle/kafka-kraft
          ports:
            - containerPort: 9092
            - containerPort: 9093
          volumeMounts:
            - name: data
              mountPath: /mnt/kafka
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "250Mi"
