etc/kubernetes/spark.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: kaspar
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spark-master-svc
            port:
              number: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: spark-master-svc
  namespace: kaspar
spec:
  ports:
    - name: cluster
      port: 7077
      targetPort: 7077
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
  selector:
    app.kubernetes.io/component: spark-master
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spark-master
  namespace: kaspar
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: spark-master
  template:
    metadata:
      labels:
        app.kubernetes.io/component: spark-master
    spec:
      containers:
        - name: spark-master-container
          image: bitnami/spark:3.3.1
          ports:
            - containerPort: 7077
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spark-worker
  namespace: kaspar
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/component: spark-worker
  template:
    metadata:
      labels:
        app.kubernetes.io/component: spark-worker
    spec:
      containers:
        - name: spark-master-container
          image: bitnami/spark:3.3.1
          ports:
            - containerPort: 8080
